Add RoundCorner in line.

--- a/Example/HASlider/Base.lproj/Main.storyboard
+++ b/Example/HASlider/Base.lproj/Main.storyboard
@@ -53,6 +53,7 @@
                                     <userDefinedRuntimeAttribute type="color" keyPath="rightSelectionColor">
                                         <color key="value" red="1" green="0.77717686320000001" blue="0.95475250869999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="roundCorner" value="NO"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Xh-Gn-467">
